--- a/app/src/main/res/layout/custom_date_filter.xml
+++ b/app/src/main/res/layout/custom_date_filter.xml
@@ -23,6 +23,8 @@
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:text="2020-08-06"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold" />
 
