--- a/app/src/main/res/layout/custom_homework.xml
+++ b/app/src/main/res/layout/custom_homework.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:focusedByDefault="true"
     android:layout_marginTop="8dp">
 
     <LinearLayout
@@ -12,243 +15,138 @@
         android:layout_margin="16dp"
         android:background="@drawable/cardview"
         android:orientation="vertical"
+        android:padding="16dp"
         android:weightSum="10"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:weightSum="1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:hint="Id">
 
-            <TextView
-                style="@style/bodyText"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.3"
-                android:gravity="center_vertical"
-                android:text="Id" />
-
-            <TextView
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_id"
-                style="@style/bodyText"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:gravity="center_vertical" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-            <TextView
-                android:layout_width="0dp"
-                style="@style/bodyText"
-                android:layout_weight="0.3"
-                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:enabled="false"
                 android:gravity="center_vertical"
-                android:text="Description" />
+                android:paddingStart="0dp"
+                android:textColor="@color/colorAccent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Description">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_desc"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
-
-            <TextView
-                android:layout_width="0dp"
-                style="@style/bodyText"
-                android:layout_weight="0.3"
-                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:enabled="false"
                 android:gravity="center_vertical"
-                android:text="Subject" />
+                android:paddingStart="0dp"
+                android:textColor="@color/colorAccent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Subject">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_subject"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:background="@android:color/transparent"
+                android:enabled="false"
+                android:gravity="center_vertical"
+                android:paddingStart="0dp"
+                android:textColor="@color/colorAccent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <View
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
+            android:layout_height="wrap_content"
+            android:hint="Due Date">
 
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-            <TextView
-                android:layout_width="0dp"
-                style="@style/bodyText"
-                android:layout_weight="0.3"
-                android:text="Due date"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical" />
-
-            <TextView
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_due"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:background="@android:color/transparent"
+                android:enabled="false"
+                android:gravity="center_vertical"
+                android:paddingStart="0dp"
+                android:textColor="@color/colorAccent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <View
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
+            android:layout_height="wrap_content"
+            android:hint="Details">
 
-        <LinearLayout
-            android:id="@+id/linearLayout6"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
-
-            <TextView
-                android:layout_width="0dp"
-                style="@style/bodyText"
-                android:layout_weight="0.3"
-                android:text="Additional Detail"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical" />
-
-            <TextView
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_additional"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:background="@android:color/transparent"
+                android:enabled="false"
+                android:gravity="center_vertical"
+                android:paddingStart="0dp"
+                android:textColor="@color/colorAccent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <View
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/textBoxOutline"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
+            android:layout_height="wrap_content"
+            android:hint="Id"
+            android:visibility="gone">
 
-        <LinearLayout
-            android:id="@+id/linearLayout7"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
-
-            <TextView
-                android:layout_width="0dp"
-                style="@style/bodyText"
-                android:layout_weight="0.3"
-                android:text="Type"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical" />
-
-            <TextView
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tv_type"
-                android:layout_width="0dp"
+                style="@style/resultText"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@color/colorPrimary" />
+                android:background="@android:color/transparent"
+                android:enabled="false"
+                android:gravity="center_vertical"
+                android:paddingStart="0dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="4">
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/hw_img"
                 android:layout_width="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/custom_teacher_homework" />
 
         </LinearLayout>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
