--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,10 +9,31 @@
 
     <style name="bodyText" parent="TextAppearance.AppCompat.Body2">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">sans-serif</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="fontFamily">@font/montserrat_alternates</item>
+        <item name="android:fontFamily">@font/montserrat_alternates</item>
+    </style>
+
+    <style name="resultText" parent="TextAppearance.AppCompat.Body2">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/montserrat_alternates</item>
+        <item name="android:fontFamily">@font/montserrat_alternates</item>
+    </style>
+
+    <style name="textBoxOutline" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="android:padding">0dp</item>
+        <item name="android:textColorHint">@color/colorHint</item>
+        <item name="hintEnabled">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:fontFamily">@font/montserrat_alternates</item>
+        <item name="fontFamily">@font/montserrat_alternates</item>
+        <item name="boxStrokeColor">@color/colorAccent</item>
+        <item name="startIconTint">@color/colorAccent</item>
+        <item name="hintTextColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorAccent</item>
     </style>
 
 </resources>
