--- a/app/src/main/res/layout/custom_homework.xml
+++ b/app/src/main/res/layout/custom_homework.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:focusedByDefault="true"
-    android:layout_marginTop="8dp">
+    android:focusedByDefault="true">
 
     <LinearLayout
         android:layout_width="match_parent"
