--- a/app/src/main/res/layout/custom_teacher_homework.xml
+++ b/app/src/main/res/layout/custom_teacher_homework.xml
@@ -44,6 +44,41 @@
                 android:src="@drawable/ic_baseline_file_copy_24"
                 android:visibility="gone" />
 
+            <ImageView
+                android:id="@+id/pdf"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:layout_margin="16dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_baseline_picture_as_pdf_24"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/ppt"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:layout_margin="16dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_ppt"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/xls"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:layout_margin="16dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_xls_file"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/txt"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:layout_margin="16dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_txt_file"
+                android:visibility="visible" />
 
         </LinearLayout>
 
